# nix-jetbrains-plugins

./: .nixignore  COPYING  README.md  default.nix  dev.nix  flake.nix  plugins.nix
.github/: dependabot.yml
.github/workflows/: generate.yml
generator/: Cargo.toml  pkg.nix
generator/src/: ides.rs  logging.rs  main.rs  plugins.rs
generator/src/ides/: android_studio.rs  jetbrains.rs  mod.rs
