[package]
name = "nix-jebrains-plugins-generator"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
log4rs = "1.4"
serde = "1"
serde-xml-rs = "0.8"
serde_json = "1"
futures = "0.3"
tokio-retry2 = "0.5"
nix-base32 = "0.2"
base64 = "0.22"
version-compare = "0.2"
lazy_static = "1.5"
which = "8"
